--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,7 +37,7 @@
 
                             </div>
                             <div class="col">
-                               <h1 class="pt-5" style="font-weight: bold">Eco Debut - экологичный бренд, за устойчивое развитие.</h1>
+                               <h1 class="pt-5" style="font-weight: bold">Eco Début - экологичный бренд, за устойчивое развитие.</h1>
                                 <h5>Мы изготавливаем предметы одежды из перерботвнных материалов</h5>
                             </div>
                         </div>
