--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="col">
                                <h1 class="pt-5" style="font-weight: bold">Eco Début - экологичный бренд, за устойчивое развитие.</h1>
-                                <h5>Мы изготавливаем предметы одежды из перерботвнных материалов</h5>
+                                <h5>Мы изготавливаем предметы одежды из переработанных материалов</h5>
                             </div>
                         </div>
 
@@ -87,9 +87,6 @@
                             <div class="col-lg-7 pt-5">
                                 <h1 class="pt-5" style="font-weight: bold">Слитные и раздельные модели купальников для ваших малышек</h1>
                                 <h5>Сделаны с любовью и заботой о вас</h5>
-                                <div class="mt-3">
-                                    <button class="btn btn-outline-success">Купить</button>
-                                </div>
                             </div>
                             <div class="col">
                                 <img th:src="@{/pictures/kidss.png}"style="width: 400px;height: inherit">
@@ -99,27 +96,22 @@
                     </div>
                 </section>
 
-                <section class="main" style="background-color: white">
+                <section class="main" style="height: 400px">
                     <div class="container">
                         <div class="row py-5">
                             <div class="col-5">
-                                <img th:src="@{/pictures/women.png}"style="width: 400px;height: inherit">
+                                <img th:src="@{/pictures/ecodebut.png}"style="width: 400px;height: inherit">
 
                             </div>
                             <div class="col-7">
                                 <h1 class="pt-5" style="font-weight: bold">Покупая купальник из переработанного океанического пластика,</h1>
                                 <h5>вы вносите вклад в ощищение мирового океана</h5>
-                                <div class="mt-4">
-                                    <button class="btn btn-outline-success">Купить</button>
-                                </div>
+
                             </div>
                         </div>
 
                     </div>
                 </section>
-
-
-
             </div>
 
     </div>
