--- a/src/main/resources/templates/verify_fail.html
+++ b/src/main/resources/templates/verify_fail.html
@@ -1,4 +1,4 @@
 <div class="container text-center">
-    <h3>Sorry, we could not verify account. It maybe already verified,
-        or verification code is incorrect.</h3>
+    <h3>К сожалению, мы не смогли подтвердить учетную запись. Возможно, это уже проверено,
+        или неверный проверочный код.</h3>
 </div>
