--- a/src/main/resources/templates/detailsAdmin.html
+++ b/src/main/resources/templates/detailsAdmin.html
@@ -22,10 +22,6 @@
                                 <input type="number" class="form-control" name="item_price" th:value="${item.getPrice()}">
                             </div>
                             <div class="form-group">
-                                <label th:text="#{label.stars}"></label>
-                                <input type="number" class="form-control" name="item_stars" th:value="${item.getStars()}">
-                            </div>
-                            <div class="form-group">
                                 <label th:text="#{label.Date}"></label>
                                 <input type="date" class="form-control" name="item_addedDate" th:value="${item.getAddedDate()}">
                             </div>
@@ -99,7 +95,7 @@
                 <td>
 
                     <div class="card" style="width: 50px;height: 50px;">
-                        <img th:src="@{'/picturesItem/'+${item.smallPicURL}}" style="width: 100%; height: 100%"  class="card-img-top" alt="...">
+                        <img th:src="@{'/picturesItem/'+${item.smallPicURL}}" style="height: 50px; object-fit:cover"  class="card-img-top" alt="...">
                     </div>
 
 
@@ -134,7 +130,7 @@
                         <td>
 
                             <div class="card" style="width: 50px;height: 50px;">
-                                <img th:src="@{'/viewPicture?url='+${pic.url}}" style="padding: 5px;"  class="card-img-top" alt="...">
+                                <img th:src="@{'/viewPicture?url='+${pic.url}}" style="height: 50px; object-fit:cover"  class="card-img-top" alt="...">
                             </div>
 
 
