--- a/src/main/resources/templates/successRegistration.html
+++ b/src/main/resources/templates/successRegistration.html
@@ -7,9 +7,9 @@
         <div class="container h-65">
             <div class="row d-flex justify-content-center align-items-center h-65">
                 <div class="container text-center">
-                    <h3>You have signed up successfully!</h3>
-                    <p>Please check your email to verify your account.</p>
-                    <h4><a th:href="@{'/login'}">Click here to Login</a></h4>
+                    <h3>Вы успешно зарегистрировались!</h3>
+                    <p>Пожалуйста, проверьте свою электронную почту, чтобы подтвердить свою учетную запись.</p>
+                    <h4><a th:href="@{'/login'}">Нажмите сюда, чтобы войти в систему</a></h4>
                 </div>
                 </div>
             </div>
