--- a/src/main/resources/templates/verify_success.html
+++ b/src/main/resources/templates/verify_success.html
@@ -1,4 +1,4 @@
 <div class="container text-center">
-    <h3>Congratulations, your account has been verified.</h3>
-    <h4><a th:href="@{'/login'}">Click here to Login</a></h4>
+    <h3>Поздравляем, ваша учетная запись была подтверждена.</h3>
+    <h4><a th:href="@{'/login'}">Нажмите здесь, чтобы войти в систему</a></h4>
 </div>
