--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Eco Début</title>
-        <link rel="stylesheet" th:href="@{'https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css'}" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" th:href="@{'/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css'}" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css" href="/style/main.css">
 
@@ -17,9 +17,9 @@
         <!-- Подключение jQuery плагина Masked Input -->
         <script th:src="@{'jquery.maskedinput.min.js'}"></script>
 
-        <script th:src="@{'http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'}"></script>
-        <script th:src="@{'https://code.jquery.com/jquery-3.5.1.slim.min.js'}" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script th:src="@{'https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js'}" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script th:src="@{'/ajax/libs/jquery/1.9.0/jquery.min.js'}"></script>
+        <script th:src="@{'/jquery-3.5.1.slim.min.js'}" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script th:src="@{'/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js'}" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container-fluid" th:insert="~{layout/navbar}"></div>
