--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@
                                             <span th:text="${message}"></span>
                                         </div>
                                         <div class="alert alert-success" role="alert" th:hidden="${success==null}">
-                                            <span th:text="${success}"></span>
+                                            <span th:text="${message}"></span>
                                         </div>
                                         <form th:action="@{'/registr'}" method="post">
                                             <div class="form-group">
