--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,8 +1,8 @@
-<html xmlns:th = "http://www.thymeleaf.org"
-      xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorator = "layout/main.html">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/main.html">
 
 
-<div layout:fragment="site_content" >
+<div layout:fragment="site_content">
     <section class="vh-65">
         <div class="container h-65">
             <div class="row d-flex justify-content-center align-items-center h-65">
@@ -14,40 +14,45 @@
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-2">Регистрация</p>
 
-                                        <div class="alert alert-danger" role="alert" th:hidden="${message!=null}">
-                                            <span th:text="${message}"></span>
-                                        </div>
-                                        <div class="alert alert-success" role="alert" th:hidden="${success==null}">
-                                            <span th:text="${success}"></span>
-                                        </div>
-                                        <form th:action="@{'/registr'}" method="post">
-                                            <div class="form-group">
-                                                <label th:text="#{email}"></label>
-                                                <input type="email" name = "user_email" class="form-control"/>
-                                            </div>
-                                            <div class="form-group">
-                                                <label th:text="#{password}"></label>
-                                                <input type="password" name = "user_password" class="form-control">
-                                            </div>
-                                            <div class="form-group">
-                                                <label>Повторите пароль</label>
-                                                <input type="password" name = "user_repassword" class="form-control">
-                                            </div>
-                                            <div class="form-group">
-                                                <label th:text="#{fullname}"></label>
-                                                <input type="text" name = "user_fullname" class="form-control">
-                                            </div>
-                                            <div class="form-group" >
-                                                <button class="btn btn-success form-control" th:text="#{signup}"></button>
-                                                <p class="small fw-bold mt-2 pt-1 mb-0">Уже есть аккаунт?<a th:href="@{'/login'}"> Войдите</a></p>
+                                    <div class="alert alert-danger" role="alert"
+                                         th:hidden="${#request.getParameter('userExist')==null}">
+                                        <span>Пользователь с такой почтой уже зарегистрирован</span>
+                                    </div>
 
-                                            </div>
-                                        </form>
+                                    <div class="alert alert-danger" role="alert"
+                                         th:hidden="${#request.getParameter('password')==null}">
+                                        <span>Пароли не совпадают</span>
+                                    </div>
+                                    <form th:action="@{'/registr'}" method="post">
+                                        <div class="form-group">
+                                            <label th:text="#{email}"></label>
+                                            <input type="email" name="user_email" class="form-control"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <label th:text="#{password}"></label>
+                                            <input type="password" name="user_password" class="form-control">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Повторите пароль</label>
+                                            <input type="password" name="user_repassword" class="form-control">
+                                        </div>
+                                        <div class="form-group">
+                                            <label th:text="#{fullname}"></label>
+                                            <input type="text" name="user_fullname" class="form-control">
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-success form-control" th:text="#{signup}"></button>
+                                            <p class="small fw-bold mt-2 pt-1 mb-0">Уже есть аккаунт?<a
+                                                    th:href="@{'/login'}"> Войдите</a></p>
+
+                                        </div>
+                                    </form>
 
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid" alt="Sample image">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                                         class="img-fluid" alt="Sample image">
 
                                 </div>
                             </div>
