--- a/src/main/resources/templates/detailsAdmin.html
+++ b/src/main/resources/templates/detailsAdmin.html
@@ -95,7 +95,7 @@
                 <td>
 
                     <div class="card" style="width: 50px;height: 50px;">
-                        <img th:src="@{'/root/static/picturesItem/'+${item.smallPicURL}}" style="height: 50px; object-fit:cover"  class="card-img-top" alt="...">
+                        <img th:src="@{'/picturesItem/'+${item.smallPicURL}}" style="height: 50px; object-fit:cover"  class="card-img-top" alt="...">
                     </div>
 
 
